# QtQuickPlaygound

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  Main.qml  main.cpp
src/cmake/: RunMacDeployQt.cmake
